--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <header>
         <h1>probando git</h1>
     </header>
+    <main>
+        <h2>hola</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum tempora quae quod explicabo, atque ratione repudiandae earum aut maxime commodi quasi fugiat aspernatur, possimus iusto sunt sint, dolor fuga ex!
+        </p>
+    </main>
 </body>
 </html>
