un p y ul con li

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum tempora quae quod explicabo, atque ratione repudiandae earum aut maxime commodi quasi fugiat aspernatur, possimus iusto sunt sint, dolor fuga ex!
         </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sint quos odio odit labore officiis dolor sed, velit tenetur cum?
+        </p>
+        <ul>
+            <li>aa</li>
+            <li>aa</li>
+            <li>aa</li>
+            <li>aa</li>
+            <li>aa</li>
+        </ul>
     </main>
 </body>
 </html>
