--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum tempora quae quod explicabo, atque ratione repudiandae earum aut maxime commodi quasi fugiat aspernatur, possimus iusto sunt sint, dolor fuga ex!
         </p>
         <p>
-<<<<<<< HEAD
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil esse corporis repellat, nostrum iure corrupti iste voluptatibus cumque, rerum inventore dolorum sint velit a at quo ad dolores laudantium?
-        </p>
-=======
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sint quos odio odit labore officiis dolor sed, velit tenetur cum?
         </p>
         <ul>
@@ -29,7 +25,9 @@
             <li>aa</li>
             <li>aa</li>
         </ul>
->>>>>>> rama1
     </main>
+    <footer>
+        <h2>hola</h2>
+    </footer>
 </body>
 </html>
