--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </main>
     <footer>
         <h2>hola</h2>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel veniam alias soluta at corrupti amet sequi excepturi, quis voluptates quaerat accusamus, laboriosam provident modi harum ducimus veritatis exercitationem dolor est!
+        </p>
     </footer>
 </body>
 </html>
